# sceneqora

./: .env.example  .gitignore  Makefile  README.md  guide.md  plan.md  pyproject.toml  sceneqora_codex_builder.md  sceneqora_gpt_5_4_architect.md  sceneqora_ticket.md
configs/: default.yaml
docs/validation/: etape_1_002_config_contrats_manifest_minimal.ipynb  etape_2_001_probe_video_local_minimal.ipynb  etape_2_002_extraction_audio_locale_minimale.ipynb  etape_2_003_transcription_audio_locale_minimale.ipynb  etape_2_004_horodatage_transcription_audio_minimal.ipynb  etape_2_005_generation_srt_minimale.ipynb  etape_3_001_assemblage_pipeline_local_minimal.ipynb  etape_3_002_validation_output_pipeline_minimale.ipynb  etape_3_003_support_entree_parole_reelle_minimale.ipynb  etape_3_004_packaging_run_output_minimal.ipynb  etape_4_001_api_locale_minimale.ipynb
src/sceneqora/: __init__.py
tests/fixtures/: ffprobe_video_sample.json
tests/unit/: test_api_local.py  test_audio_extract.py  test_cli_smoke.py  (+8 more)
tickets/: etape_1_001_bootstrap_repo_minimal.md  etape_1_002_config_contrats_manifest_minimal.md  etape_2_001_probe_video_local_minimal.md  etape_2_002_extraction_audio_locale_minimale.md  etape_2_003_transcription_audio_locale_minimale.md  etape_2_004_horodatage_transcription_audio_minimal.md  etape_2_005_generation_srt_minimale.md  etape_3_001_assemblage_pipeline_local_minimal.md  etape_3_002_validation_output_pipeline_minimale.md  etape_3_003_support_entree_parole_reelle_minimale.md  etape_3_004_packaging_run_output_minimal.md  etape_4_001_api_locale_minimale.md
(+22 files in other folders)
