[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sceneqora"
version = "0.1.0"
description = "Minimal bootstrap for the Sceneqora local pipeline project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116",
    "PyYAML>=6.0",
    "openai-whisper>=20250625",
    "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "mypy>=1.19",
    "pytest>=9.0",
    "ruff>=0.15.8",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
sceneqora = "sceneqora.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
